[gd_scene load_steps=5 format=3 uid="uid://dis84ohuqwq0s"]

[ext_resource type="PackedScene" uid="uid://d4ikok6ag8dqa" path="res://days/day.tscn" id="1_ibxko"]
[ext_resource type="Script" path="res://days/day6.gd" id="2_aj2s5"]
[ext_resource type="TileSet" uid="uid://cwl6elc878x2f" path="res://assets/day6_tiles.tres" id="3_i1gur"]
[ext_resource type="Texture2D" uid="uid://7jij452riby7" path="res://assets/arrow.png" id="4_42il2"]

[node name="Day6" instance=ExtResource("1_ibxko")]
script = ExtResource("2_aj2s5")
running = false
zoom_level = 0.1
guard_speed = 1.1

[node name="MarginContainer" parent="CanvasLayer" index="0"]
offset_left = -1.0
offset_right = -1.0

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer" index="1"]
layout_mode = 2

[node name="RunExample" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer2" index="0"]
layout_mode = 2
text = "Run Example"

[node name="RunData" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer2" index="1"]
layout_mode = 2
text = "Run Data"

[node name="Play" type="CheckButton" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer2" index="2"]
layout_mode = 2
text = "Play"

[node name="Zoom" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer2" index="3"]
layout_mode = 2
text = "Zoom 1:1"

[node name="GuardSpeed" type="SpinBox" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer2" index="4"]
layout_mode = 2
min_value = 0.1
max_value = 1000.0
value = 1.1
exp_edit = true
update_on_text_changed = true
suffix = "tiles/s"

[node name="TileMap" type="TileMap" parent="." index="2"]
position = Vector2(398, 96)
scale = Vector2(0.5, 0.5)
tile_set = ExtResource("3_i1gur")
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 0, 65536, 0, 0, 65537, 0, 0, 1, 1, 0, 2, 0, 0, 65538, 0, 0, 131074, 0, 0, 131073, 0, 0, 131072, 0, 0, 65539, 1, 0, 3, 1, 0, 131075, 0, 0, 196611, 0, 0, 196610, 1, 0, 196609, 0, 0, 196608, 1, 0)

[node name="Guard" type="Node2D" parent="TileMap" index="0"]
position = Vector2(380, 640)
rotation = -1.57079

[node name="BlinkDisc" type="Polygon2D" parent="TileMap/Guard" index="0"]
scale = Vector2(1, 1)
color = Color(0.894118, 0, 0, 1)
polygon = PackedVector2Array(0, -110, 40, -100, 80, -80, 100, -40, 110, 0, 100, 40, 80, 80, 40, 100, 0, 110, -40, 100, -80, 80, -100, 40, -110, 0, -100, -40, -80, -80, -40, -100)

[node name="Sprite2D" type="Sprite2D" parent="TileMap/Guard" index="1"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("4_42il2")

[node name="Target" type="Node2D" parent="TileMap" index="1"]
position = Vector2(376, 402)

[node name="BlinkDisc2" type="Polygon2D" parent="TileMap/Target" index="0"]
scale = Vector2(1, 1)
color = Color(0.909804, 0.780392, 0, 0.533333)
polygon = PackedVector2Array(0, -110, 40, -100, 80, -80, 100, -40, 110, 0, 100, 40, 80, 80, 40, 100, 0, 110, -40, 100, -80, 80, -100, 40, -110, 0, -100, -40, -80, -80, -40, -100)

[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer2/RunExample" to="." method="_on_run_pressed" binds= ["Example"]]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer2/RunData" to="." method="_on_run_pressed"]
[connection signal="toggled" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer2/Play" to="." method="_on_play_toggled"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer2/Zoom" to="." method="_on_zoom_pressed"]
